--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.0-rc.2-1",
-    "use-debounce": "^3.4.2"
+    "use-debounce": "^3.4.2",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-storage": "^4.1.2",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
